2013-10-27  Ramon Casero  <rcasero@gmail.com>

	* matlab/PointsToolbox/surface_param.m: (0.5.2)
	* matlab/test/test_surface_param.m: (0.5.2)

	- Rewrite 'cald' (Li Shen's Control Area and Length Distortions
	(CALD) spherical parametrization). Pass parameters all together
	under param.options.

	* Add matlab/test/data/008-lv-resampled-0_31.mha:

	- Segmentation of a low resolution LV with detail and papillary
	muscles removed, for closed surface parameterization tests.

2013-10-25  Ramon Casero  <rcasero@gmail.com>

	* matlab/PointsToolbox/surface_param.m: (0.5.1)
	* matlab/test/test_surface_param.m: (0.5.1)

	- Rewrite help of 'sphproj' and write test for it. Rename
	estimated sphere radius as sphrad for uniformity with the other
	methods.

	* matlab/PointsToolbox/surface_param.m: (0.5.0)
	* matlab/test/test_surface_param.m: (0.5.0)

	- Rewrite method 'lmdscale', that was non-functional. Also, now
	parameters for fast marching are passed in param.options, and
	parameters for local neighbourhood MDS are passed in
	param.options2.

	- Correct help for 'cmdsmap'.

	* matlab/ManifoldToolbox/dmatrix_mesh.m: (0.4.1)

	- Small, compute distances by column instead of by row.

	* matlab/PointsToolbox/surface_param.m: (0.4.0)
	* matlab/test/test_surface_param.m: (0.4.0)

	- Rewrite of methods 'isomap' and 'cmdsmap'. The first one now has
	an input syntax congruent with the method. The second one is the
	open surface classic MDS, that is, only valid for full distance
	matrices, using classic MDS to solve the parameterization.

	- Add 'lmdscale' for open surface with local neighbourhoods. But
	still needs correcting.

2013-10-21  Ramon Casero  <rcasero@gmail.com>

	* matlab/FiltersToolbox/scimat_lconvhull_smoothing.m: (0.7.0)

	- Move rasterization code to scimat_tri_to_raster().

	- Change order of output arguments. Now we provide the option of
	computing only the alpha-shape mesh. And then, if the user has
	requested the rasterization, this is computed too.
